<resources>
    <string name="app_name">GestionRDV_Medical</string>

    <string name="btn_valider">Confirmer</string>
    <string name="btn_annuler">Annuler</string>
    <string name="r_capitulatif_du_rendez_vous">Récapitulatif du rendez-vous</string>
    <string name="confirmer">Confirmer</string>
    <string name="prise_de_rendez_vous">Prise de rendez-vous</string>
    <string name="error_fill_all">Veuillez remplir tous les champs</string>
    <string name="register_success">Inscription réussie !</string>
    <string name="welcome_patient">Bienvenue,</string>
    <string name="register_title">Inscription</string>
    <string name="hint_first_name">Prénom</string>
    <string name="hint_last_name">Nom</string>
    <string name="hint_phone">Tél</string>
    <string name="hint_email">Adresse Email</string>
    <string name="hint_password">Mot de passe</string>
    <string name="button_register">S\'inscrire</string>
    <string name="btn_take_rdv">Prendre RDV</string>
    <string name="btn_my_rdv">Mes RDV</string>
    <string name="btn_profile">Profil</string>string>
    <string name="act_admin_db_db">Dashboard</string>
    <string name="act_admin_db_vh">View History</string>
    <string name="act_admin_db_mu">Manage Users</string>
    <string name="act_admin_db_vs">View Stats</string>
    <string name="no_history">No History Available</string>
    <string name="select_date">Select Date</string>
    <string name="configurez_vos_jours_et_cr_neaux_horaires_de_travail">Configurez vos jours et créneaux horaires de travail</string>
    <string name="jours_de_travail_5_7">Jours de travail: 5/7</string>
    <string name="retour">← Retour</string>
    <string name="g_rer_mes_disponibilit_s">Gérer mes disponibilités</string>
    <string name="total_cr_neaux_10">Total créneaux: 10</string>
    <string name="jours_de_travail_0_7">Jours de travail: 0/7</string>
    <string name="jours_de_travail">Jours de travail</string>
    <string name="lundi">Lundi</string>
    <string name="cr_neau_horaire">Créneau horaire:</string>
    <string name="mardi">Mardi</string>
    <string name="mercredi">Mercredi</string>
    <string name="jeudi">Jeudi</string>
    <string name="vendredi">Vendredi</string>
    <string name="samedi">Samedi</string>
    <string name="dimanche">Dimanche</string>
    <string name="sauvegarder_les_disponibilit_s">Sauvegarder les disponibilités</string>
    <string name="bonjour_dr_nom">Bonjour Dr.</string>
    <string name="patients_du_jour">Patients du jour:</string>
    <string name="_4">4</string>
    <string name="patients_en_attente">Patients en attente</string>
    <string name="_5">5</string>
    <string name="total_consultations">Total consultations</string>
    <string name="liste_des_patients_du_jour">Liste des patients du jour</string>
    <string name="appointments_history">Appointments History</string>
    <string name="_0_appointments">0 appointments</string>
    <string name="filters">Filters</string>
    <string name="clear">Clear</string>
    <string name="espace_sant">Espace Santé</string>
    <string name="adresse_email">Adresse Email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="se_connecter">Se connecter</string>
    <string name="pas_encore_de_compte_cr_er_un_compte">Pas encore de compte ? Créer un compte</string>
    <string name="registered_users">Registered Users</string>
    <string name="_0_users">0 users</string>
    <string name="search_name_email_or_phone">Search name, email or phone</string>
    <string name="pick_date">Pick Date</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="prendre_un_rendez_vous">Prendre un Rendez-vous</string>
    <string name="mon_profil">Mon Profil</string>
    <string name="vous_recevrez_une_notification_de_rappel_la_veille_du_rendez_vous">Vous recevrez une notification de rappel la veille du rendez-vous.</string>

</resources>